# lensmind

./: .env.example  .gitignore  config.yaml  extensions_config.json  langgraph.json  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py
backend/app/gateway/: app.py
backend/scripts/: dev.sh
doc/: API.md  ARCHITECTURE.md  PRD.md  TEST_PLAN.md
doc/agents/: lead-agent-orchestrator.md
doc/guides/: CONFIGURATION.md  DEPLOYMENT.md  SKILL_DEVELOPMENT.md
doc/html/: VEO 3.1 · 视频异步 API 接入文档.html
doc/reviews/: 001-modelconfig-review.md  002-subagent-config-review.md  003-sandbox-config-review.md  004-skills-config-review.md  005-memory-config-review.md  006-features-config-review.md  007-appconfig-review.md  008-agent-factory-review.md  009-runtime-features-review.md  010-sandbox-interface-review.md  011-local-sandbox-review.md  012-subagent-registry-review.md  013-subagent-runconfig-review.md  014-subagent-prompt-review.md  015-script-writer-keep-name.md  016-clarification-tool-review.md  017-bash-tool-sandbox-fix.md  018-task-tool-executor.md
doc/rfcs/: rfc-create-agent-factory.md  rfc-skill-system.md
doc/specs/: mcp-integration.md  middleware-execution-flow.md  sandbox-design.md  subagent-contract.md
docker/: docker-compose.yaml
docker/nginx/: default.conf
tests/: __init__.py  conftest.py  test_audit_defense.py  test_audit_perf.py  test_boundary.py  test_config.py  test_error_handling.py  test_sandbox_local.py  test_security.py  test_skills.py  test_tools_unit.py  test_workflow.py
(+15 files in other folders)
