[project]
name = "lensmind"
version = "0.1.0"
description = "AI Agent for e-commerce video generation"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2,<1.0",
    "langchain>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
    "langchain-anthropic>=0.2,<1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages"]
